--- a/app/src/main/res/layout/activity_zhenggai_shangbao.xml
+++ b/app/src/main/res/layout/activity_zhenggai_shangbao.xml
@@ -103,7 +103,27 @@
                     android:textSize="14sp" />
 
             </LinearLayout>
+<!--            图片展示-->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_157"
+                android:gravity="center_vertical"
+                android:orientation="vertical"
+                android:paddingLeft="@dimen/dp_10"
+                android:visibility="gone">
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="图片展示："
+                    android:textColor="@color/six"
+                    android:textSize="14sp" />
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_img"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dp_120"/>
+
+            </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dp_30"
